[tool.poetry]
name = "test-13-0"
version = "0.1.0"
description = ""
authors = ["igorpetushkov <igor.igorevich08@gmail.com>"]
readme = "README.md"
packages = [{include = "test_13"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
